--- a/Reparaciones.vbproj
+++ b/Reparaciones.vbproj
@@ -84,6 +84,7 @@
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
       <DependentUpon>Application.myapp</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <Compile Include="My Project\Resources.Designer.vb">
       <AutoGen>True</AutoGen>
@@ -101,6 +102,12 @@
     <Compile Include="recepciondeequipos.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="registro de clientes.Designer.vb">
+      <DependentUpon>registro de clientes.vb</DependentUpon>
+    </Compile>
+    <Compile Include="registro de clientes.vb">
+      <SubType>Form</SubType>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Form1.resx">
@@ -115,6 +122,9 @@
     <EmbeddedResource Include="recepciondeequipos.resx">
       <DependentUpon>recepciondeequipos.vb</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="registro de clientes.resx">
+      <DependentUpon>registro de clientes.vb</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
     <None Include="My Project\Application.myapp">
@@ -127,6 +137,9 @@
       <LastGenOutput>Settings.Designer.vb</LastGenOutput>
     </None>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\7abed3b7c43790782fdee21c52fae5dc.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
 </Project>
