--- a/Reparaciones.vbproj
+++ b/Reparaciones.vbproj
@@ -80,6 +80,10 @@
       <DependentUpon>Form1.vb</DependentUpon>
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Frminicio.Designer.vb">
+      <DependentUpon>Frminicio.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Frminicio.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
@@ -113,6 +117,9 @@
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.vb</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Frminicio.resx">
+      <DependentUpon>Frminicio.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="My Project\Resources.resx">
       <Generator>VbMyResourcesResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.vb</LastGenOutput>
@@ -140,6 +147,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\7abed3b7c43790782fdee21c52fae5dc.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\1..png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
 </Project>
